--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
               <li><a href="#">Inicio</a></li>
               <li><a href="#">Nosotros</a>
                   <ul>
-
+                      qsqsS
                   </ul>
               </li>
 
               <li><a href="#">Blog</a>
                   <ul>
-
+                    AWDWADWADWADAWDareasqQS
                   </ul>
               </li>
 
